# geostatsmith

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  ALASKA_AGDB4.md  CHANGELOG.md  CLAUDE.md  CODE_AUDIT_REPORT.md  CONFIG_ARCHITECTURE.md  CONFIG_ARCHITECTURE_DIAGRAM.md  CONFIG_IMPLEMENTATION_COMPLETE.md  CONFIG_QUICK_REFERENCE.md  CONTRACT.md  CONTRIBUTING.md  DEVELOPMENT_SETUP.md  FIXES_APPLIED.md  GEOCHEMISTRY.md  LICENSE  MATHEMATICAL_REVIEW.md  MIGRATION_UV.md  MINIMALIST_PLOTTING_SUMMARY.md  PLACEHOLDERS.MD  PLOTTING_STYLE_GUIDE.md  README.md  REVIEW_SUMMARY.md  SETUP_HOOKS.md  SYNTAX_ERRORS_AUDIT.md  TEST_RESULTS.md  alaska_analysis_results.txt  alaska_depth_sample.csv  alaska_geology_sample.csv  alaska_gold_synthetic.csv  demo_minimalist_plots.py  elevation_kriging.tif  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  sample_elevation.csv  temp.md  test_config.yaml  (+3 more)
.cursor/: ci-gates.md  rules.md
.cursor/rules/: dev-loop.md  dev-workflow.mdc
.githooks/: pre-push.
.github/: SECURITY.md
.github/workflows/: ci.yml  local-check.yml  test.yml
alaska_outputs/: alaska_full_analysis_results.txt
alaska_outputs/demos/: SUMMARY.txt  demo_01_output.txt  demo_02_output.txt  demo_03_output.txt
archive/: ADVANCED_TESTING_SUMMARY.md  ALASKA_ANALYSIS_SUMMARY.md  ALASKA_EXAMPLES_STATUS.md  CLEANUP_SUMMARY.md  COVERAGE_50_PERCENT_ACHIEVED.md  DEMOS_SHOWCASE.md  ENGINEERING_IMPROVEMENTS.md  ERROR_MESSAGE_AUDIT.md  ERROR_MESSAGE_STANDARDS.md  FINAL_TESTING_SUMMARY.md  FIXES_APPLIED.md  IMPLEMENTATION_COMPLETE.md  NEXT_ACTIONS.md  PHASE_1_COMPLETE.md  PHASE_1_QUICKREF.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  PYTHONIC_REFACTORING.md  PYTHON_RECIPES_ENHANCEMENTS.md  PYTHON_VERSION_UPDATE.md  SENIOR_DEV_REVIEW.md  TEST_COVERAGE_REPORT.md  TEST_PROGRESS_FINAL.md  TEST_SUMMARY.md  WORK_COMPLETE_SUMMARY.md
dev/: README.md  ascii  check  exception-check  fmt  lint  placeholder-check  print-check  test  type
docs/: API_REFERENCE.md  ARCHITECTURE.md  BEST_PRACTICES.md  CONFIG_DRIVEN.md  CONSTANTS_CONFIG.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  INSTALL.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  TUTORIALS.md  USER_GUIDE.md  concepts.md  faq.md  howto.md  index.md  overview.md  reference.md
docs/source/: conf.py  config_driven.rst  contributing.rst  index.rst  install.rst  quick_reference.rst  quickstart.rst
docs/source/api/: algorithms.rst  automl.rst  cli.rst  datasets.rst  index.rst  io.rst  ml.rst  models.rst  optimization.rst  performance.rst  simulation.rst  transformations.rst  uncertainty.rst  validation.rst  visualization.rst  workflows.rst
docs/source/applications/: environmental.rst  mining_exploration.rst
docs/source/getting_started/: concepts.rst  quickstart.rst
docs/source/guides/: config_driven.rst  method_selection.rst
docs/source/workflows/: kriging_interpolation.rst  simulation.rst  validation.rst  variogram_analysis.rst
examples/: DEMOS_README.md  README.md  alaska_geochemical_analysis.py  demo_01_gold_exploration.py  demo_02_multi_element_cokriging.py  demo_03_environmental_assessment.py  example_1_basic_variogram.py  example_2_kriging_interpolation.py  example_3_comparison_kriging_methods.py  example_4_indicator_kriging.py  example_5_simulation_sgs.py  example_6_visualization_tools.py  example_7_advanced_features.py  example_disjunctive_kriging.py  improved_correlation_analysis.py  recipe_01_dem_interpolation.py  recipe_02_method_comparison.py  recipe_03_point_patterns.py  run_all_alaska_demos.py  run_full_alaska_analysis.py  test_alaska_data.py  workflow_01_data_io.py  workflow_02_optimization.py  workflow_03_uncertainty.py  workflow_04_performance.py  workflow_05_interactive_automl.py  workflow_06_enterprise.py
examples/configs/: README.md  advanced_template.yaml  alaska_advanced.yaml  alaska_basic.yaml  alaska_gold_example.yaml  alaska_streams.yaml  basic_template.yaml  constants_example.yaml  gold_exploration_template.yaml
notebooks/: 01_gold_exploration_insights.py  02_multi_element_detective.py  03_environmental_risk.py  README.md  convert_to_notebooks.sh
pdf_converted_markdown/: 1141.txt  Diggle-Ribeiro-2007.txt  Geostatistics.txt  README.md  US_PracticalGeostatistics2000.txt  geokniga-introductiontogeostatistics.txt  geosta1.txt  imet131-i-chapitre-5.txt  ml022770097.txt  ofr20091103.txt  ov1.txt
results/alaska_advanced/: analysis_report.txt  cv_results.csv  predictions.csv  predictions.npy  variance.npy
results/alaska_basic/: analysis_report.txt  cv_results.csv  predictions.csv  predictions.npy  variance.npy
results/alaska_streams/: analysis_report.txt  cv_results.csv  predictions.csv  predictions.npy  variance.npy
scripts/: check.sh
src/geostats/: __init__.py  cli.py  kriging.py  variogram.py
src/geostats/algorithms/: __init__.py  cokriging.py  disjunctive_kriging.py  external_drift_kriging.py  factorial_kriging.py  fitting.py  indicator_kriging.py  kriging_3d.py  lognormal_kriging.py  neighborhood_search.py  nested_variogram.py  ordinary_kriging.py  simple_kriging.py  spacetime_kriging.py  (+3 more)
test_config_results/: analysis_report.txt  cv_results.csv  predictions.csv  predictions.npy  variance.npy
tests/: __init__.py  conftest.py  test_advanced_algorithms.py  test_advanced_algorithms_comprehensive.py  test_api.py  test_automl.py  test_base_classes.py  test_cli.py  test_comparison.py  test_config.py  test_config_system.py  test_constants_loader.py  test_core.py  test_cross_validation_extended.py  test_data_utils.py  test_datasets.py  test_declustering_outliers.py  test_diagnostics.py  test_disjunctive_kriging.py  test_edge_cases.py  test_fitting_and_datasets.py  test_integration_workflows.py  test_interactive.py  test_io.py  test_io_extended.py  test_kriging.py  test_kriging_algorithms.py  test_math_utils.py  test_ml_module.py  test_models.py  test_optimization.py  test_performance.py  test_reporting.py  test_simulation_corrected.py  test_spatial_stats.py  test_transformations.py  test_transformations_extended.py  test_uncertainty.py  test_validation.py  test_variogram.py  (+3 more)
(+97 files in other folders)
