[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geostats"
version = "0.3.0"
description = "A Python library for geostatistics and spatial data analysis"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Kyle Jones", email = "kyletjones@gmail.com"}
]
keywords = ["geostatistics", "kriging", "variogram", "spatial-statistics", "interpolation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.3.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "joblib>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "ruff>=0.1.0",
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=2.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "ruff>=0.1.0",
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=2.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]
all = [
    "rasterio>=1.2.0",
    "netCDF4>=1.5.0",
    "geopandas>=0.10.0",
    "shapely>=1.8.0",
    "fiona>=1.8.0",
    "openpyxl>=3.0.0",
    "xgboost>=1.5.0",
    "plotly>=5.0.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.20.0",
    "pydantic>=1.10.0",
    "python-multipart>=0.0.5",
    "jinja2>=3.0.0",
    "click>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/kylejones200/geostats"
Documentation = "https://geostats.readthedocs.io"
Repository = "https://github.com/kylejones200/geostats"

[project.scripts]
geostats-run = "geostats.cli:run"
geostats-validate = "geostats.cli:validate"
geostats-init = "geostats.cli:init"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--cov=geostats",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=60",
    "-v",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
# Skip type checking tests (they often use dicts where typed configs are expected)
[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# Select essential linting rules for code quality
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "E203",  # Whitespace before ':' (conflicts with Black)
    "N806",  # Allow uppercase variables for mathematical notation (K, X, Y, Z, dzdY are standard in geostatistics)
    "SIM",  # Allow if-else blocks (ternary operators are optional style)
    "F821",  # False positives from ruff (logger, dynamic imports)
    "B904",  # Blind except (common in error handling)
    "N803",  # Argument name should be lowercase (API compatibility)
    "F401",  # Unused imports (sometimes needed for side effects)
    "F4",    # Flake8 errors (general)
    "N813",  # camelCase (API compatibility)
    "F823",  # Undefined name in __all__ (dynamic exports)
    "F811",  # Redefined (sometimes needed)
    "E741",  # Ambiguous variable name (common in math)
    "UP007",  # Allow Union syntax (compatibility)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py are fine
"tests/**" = ["S101", "N806", "E741", "F841", "B017", "B904", "E712", "B007", "B905"]  # Allow common test patterns
